# xr102232_test

./: .gitignore  404.html  ACHIEVEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  release-please-config.json  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  labeler.yml  pull_request_template.md  trigger-achievements  trigger-setup
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: achievement-activity.yml  ci.yml  codeql.yml  labeler.yml  pages.yml  publish-pypi.yml  release-please.yml  setup-repo.yml  stale.yml
DISCUSSIONS/: index.html
GITHUB_SETUP/: index.html
WIKI/: index.html
api/: index.html
docs/: DISCUSSIONS.md  GITHUB_SETUP.md  WIKI.md  api.md  getting_started.md  index.md
getting_started/: index.html
scripts/: bootstrap_repo.sh  configure_github.sh  incremental_commits.sh  local_achievements.sh  merge_pushed_prs.sh  push_pr_branches.sh  run_activity.sh  smoke_test.sh
search/: search_index.json
src/xr102232_test/: __init__.py  cli.py  core.py  extras.py  types.py
tests/: test_core.py
