[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xr102232_test"
version = "0.1.0"
description = "A realistic repo scaffold for CI, releases, and achievements practice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anand", email = "anandmohan.amp@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.scripts]
xr-sum = "xr102232_test.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
